--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto do curso.dev para treinar o desenvolvimento de sistemas",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev"
   },
   "author": "",
   "license": "MIT",
